home page ui changed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-/* html{
-  user-select: none;
-  -webkit-user-drag: none;
-  -webkit-user-select: none;
-} */
+html{
+user-select: none;
+-webkit-user-drag: none;
+-webkit-user-select: none;
+}
 :root {
   --font-sans: var(--font-geist-sans, sans-serif);
   --font-mono: var(--font-geist-mono, monospace);
